--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "react": "18.3.1",
+    "react-dom": "^19.2.3",
     "lucide-react": "0.292.0",
-    "react-dom": "18.3.1",
-    "@google/genai": "0.0.12"
+    "@google/genai": "^1.34.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
